# api.8004.dev

./: .dockerignore  .env.example  .env.test.example  .flyignore  .github-checklist.md  .gitignore  API_EXAMPLES.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  SECURITY.md  TESTING.md  TEST_COVERAGE_REPORT.md  TEST_REPORT.md  api-8004-dev.service  chains.yaml  deploy-flyio.sh  docker-compose.yml  esempio-download-eventi.sh  fly.toml  get-all-events.sh  get-events-safe.sh  setup.sh  test-agent-filter.sh  test-api.sh  test-category-filter.sh  test-chain-agent-filter.sh  test-empty-categories.sh  test-endpoints.sh  test-websocket.html  test-websocket.js  test-websocket.py
.github/workflows/: ci.yml
docs/: API_AUTHENTICATION.md  CHAIN_STATUS_MONITORING.md  CI_CD_SETUP.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  LOCAL_TESTING.md  MULTICHAIN_IMPLEMENTATION.md  NEXT_STEPS.md  PRE_DEPLOY_STATUS.md  PRODUCTION_DEPLOY.md  PROVIDER_OPTIMIZATION.md  QUICK_START.md  QUICK_TEST.md  README.md  REAL_EVENTS_COVERAGE.md  RPC_ENDPOINTS.md  SECURITY.md  SVELTE_INTEGRATION.md
migrations/: 001_init.sql  002_add_chain_id.sql  003_add_chains_tables.sql  004_add_events_index.sql
scripts/: README.md  generate_password_hash.rs
scripts/deployment/: README.md  post-deploy-check.sh  pre-deploy-check.sh
scripts/development/: README.md  find-test-blocks.sh  setup-test-db.sh
scripts/monitoring/: README.md  chain-status-report.sh  check-prod-events.sh  check-prod-quick.sh  monitor-sync.sh
scripts/testing/: README.md  (+9 more)
src/: config.rs  lib.rs  main.rs  stats.rs
tests/: integration_test.rs
(+16 files in other folders)
