[package]
name = "api_8004_dev"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum libraries
alloy = { version = "0.6", features = ["full", "node-bindings", "rpc-types-eth"] }
alloy-sol-types = "0.8"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web server & WebSocket
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "migrate", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
dotenvy = "0.15"

# Utilities
dashmap = "6.1"
futures = "0.3"
hex = "0.4"

# JWT Authentication
jsonwebtoken = "9.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
bcrypt = "0.15"

# Metrics
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
serial_test = "3.2"
serde_urlencoded = "0.7"
